--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -79,13 +79,14 @@ configure_radium_app(
         USE_PLUGINS
 )
 
-# Graphical apps
 include_directories(../libs/quadwild/components/field_computation)
 include_directories(../libs/quadwild/libs/vcglib)
 include_directories(../libs/quadwild/libs/libigl/include)
+include_directories(../libs/quadwild/libs/xfield_tracer)
+include_directories(../libs/quadwild/libs/quadretopology)
 add_library( quadwildlib SHARED IMPORTED GLOBAL)
 set_target_properties( quadwildlib PROPERTIES 
-        IMPORTED_LOCATION "${CMAKE_BINARY_DIR}/libs/quadwild/components/field_computation/libfield_computation.so")
+        IMPORTED_LOCATION "${CMAKE_BINARY_DIR}/libs/quadwild/quadwild/libquadwild.so")
 
 target_link_libraries(${PROJECT_NAME} PUBLIC quadwildlib)
 
